🚀 Production Ready: Vercel + Railway Deployment
✨ Deployment Features Added:
- PostgreSQL support with dj-database-url
- WhiteNoise for static file serving
- Gunicorn WSGI server configuration
- Railway deployment configuration (railway.toml)
- Environment-based Django settings

🧹 Configuration Cleanup:
- Updated .env.example with only used variables
- Removed unused legacy configurations (NEWS_API_*, SESSION_ID)
- Added missing API key configurations (Claude, SerpAPI)
- Fixed frontend API URL consistency
- Fixed logo file case mismatch

🛠️ Technical Improvements:
- Updated yfinance to v0.2.65
- Added Claude Sonnet 4 + SerpAPI integration
- Production-ready CORS settings
- Comprehensive deployment documentation

✅ Bug Fixes:
- Fixed API URL fallbacks across all components
- Fixed Logo.svg file reference
- Verified TypeScript compilation
- Verified production build success

🎯 Ready for 30-minute Vercel + Railway deployment

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,49 @@
-API_OPENAI=your_api_key_here
+# StockCompass Environment Variables Template
+# Copy this to .env and fill in your actual values
 
-API_PER=your_api_key_here
+# =============================================================================
+# DJANGO CONFIGURATION
+# =============================================================================
+
+# Development vs Production
+DEBUG=True
+
+# Security (GENERATE NEW KEY FOR PRODUCTION!)
+SECRET_KEY=your-secret-key-here
+
+# Allowed domains (update for production)
+ALLOWED_HOSTS=localhost,127.0.0.1
+
+# Database (Railway will auto-provide DATABASE_URL in production)
+# DATABASE_URL=postgresql://user:password@host:port/database
+
+# Frontend URL (for CORS, update after Vercel deployment)  
+# FRONTEND_URL=https://your-app.vercel.app
+
+# =============================================================================
+# AI SERVICE API KEYS (Required)
+# =============================================================================
+
+# Claude Sonnet 4 - Primary AI for financial analysis
+API_CLAUDE=sk-ant-your-claude-key-here
+
+# SerpAPI - Primary news search service  
+SERPAPI_KEY=your-serpapi-key-here
+
+# =============================================================================
+# OPTIONAL API KEYS (Fallback services)
+# =============================================================================
+
+# Perplexity - Fallback news search (if SerpAPI fails)
+API_PER=pplx-your-perplexity-key-here
+
+# OpenAI - Legacy AI fallback (if Claude unavailable)  
+API_OPENAI=sk-your-openai-key-here
+
+# =============================================================================
+# SETUP INSTRUCTIONS
+# =============================================================================
+# 1. Copy this file to .env
+# 2. Get API keys from respective services
+# 3. Replace placeholder values with your actual keys
+# 4. Never commit .env to git (protected by .gitignore)
