--- a/railway.toml
+++ b/railway.toml
@@ -2,6 +2,4 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "python backend/manage.py migrate && python backend/manage.py collectstatic --noinput && gunicorn --bind 0.0.0.0:$PORT --workers 2 --chdir backend stockcompass.wsgi:application"
-restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
+startCommand = "cd backend && python manage.py migrate && python manage.py collectstatic --noinput && gunicorn --bind 0.0.0.0:$PORT --workers 2 stockcompass.wsgi:application"
