🐛 Fix Railway Build: Switch to Dockerfile
- Removed problematic nixpacks.toml
- Added simple Dockerfile for Railway
- Updated railway.toml to use DOCKERFILE builder
- Should resolve Nixpacks pip dependency issues

Railway will now use Docker instead of Nixpacks for reliable builds

--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,5 @@
 [build]
-builder = "NIXPACKS"
+builder = "DOCKERFILE"
 
 [deploy]
-startCommand = "cd backend && python manage.py migrate && python manage.py collectstatic --noinput && gunicorn --bind 0.0.0.0:$PORT --workers 2 stockcompass.wsgi:application"
+startCommand = "python manage.py migrate && gunicorn --bind 0.0.0.0:$PORT --workers 2 stockcompass.wsgi:application"
