--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -36,10 +36,12 @@ typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.3.0
 webencodings==0.5.1
+# AI and Financial Data
 yfinance==0.2.65
-openai==1.62.0
 anthropic==0.40.0
-# Cloud deployment dependencies for Railway + Vercel
+openai==1.62.0
+
+# Cloud Deployment
 psycopg2-binary==2.9.7
 dj-database-url==2.1.0
 whitenoise==6.5.0
