fix: Railway deployment - add start.sh script and update configuration
- Add backend/start.sh script for Railway deployment
- Update Dockerfile to use start.sh as CMD
- Update railway.toml with proper deploy configuration
- Ensures Railway can find and execute the start script at /app/start.sh

--- a/railway.toml
+++ b/railway.toml
@@ -1,4 +1,7 @@
 [build]
 builder = "DOCKERFILE"
+dockerfilePath = "Dockerfile"
 
-# Use Dockerfile CMD - no custom startCommand needed
+[deploy]
+# Let Dockerfile CMD handle the start command
+# No custom startCommand needed - Railway will use Dockerfile's CMD
